<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_student_details"
        android:textSize="40sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_full_name"
        android:inputType="text"
        style="@style/StyleAddStudentForm"/>

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_age"
        android:inputType="number"
        style="@style/StyleAddStudentForm"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_select_gender"
        style="@style/StyleAddStudentForm"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StyleAddStudentForm">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_male"/>

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_female"/>

        <RadioButton
            android:id="@+id/rbOthers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_others"/>

    </RadioGroup>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_address"
        android:inputType="text"
        style="@style/StyleAddStudentForm"/>

    <Button
        android:id="@+id/btnSaveStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        style="@style/StyleLoginFormInput"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"/>

</LinearLayout>