<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.elvin.employeecrud.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_student"
        android:name="com.elvin.employeecrud.ui.fragment.student.AddStudentFragment"
        android:label="@string/title_add_student"
        tools:layout="@layout/fragment_add_student" />

    <fragment
        android:id="@+id/navigation_about_us"
        android:name="com.elvin.employeecrud.ui.fragment.about.AboutUsFragment"
        android:label="@string/title_about_us"
        tools:layout="@layout/fragment_about_us" />
</navigation>